data/derived/sp14/progs/unify/prog3466.ml.out
Characters 75-79:
  | _ -> Format.printf "%f" rand(1,7)
                       ^^^^
Error: This expression has type
         ('a -> 'b, Format.formatter, unit, unit, unit, 'a -> 'b)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b, Format.formatter, unit, unit, unit, unit)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b is not compatible with type unit 
